# docuscan

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build-push.yml
src/docuscan/: __init__.py  main.py
src/docuscan/processing/: __init__.py  background_processing.py  binarization.py  document_scanner.py  enhancement.py  geometric_correction.py  utils.py
static/: index.html  script.js  style.css
